--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -8,6 +8,19 @@
     <title>SesiGym</title>
 </head>
 <body>
-    
+    <!--MENU-->
+    <div class="nav">
+        <input type="checkbox">
+          <span></span>
+          <span></span>
+          <div class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Promoções</a></li>
+            <li><a href="#">Sobre nós</a></a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Contatos</a></li>
+          </div>
+      </div>
+      
 </body>
 </html>
