--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -14,11 +14,12 @@
           <span></span>
           <span></span>
           <div class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Promoções</a></li>
-            <li><a href="#">Sobre nós</a></a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Contatos</a></li>
+            <li><a href="../landingpage/main.html">Home</a></li>
+            <li><a href="../promoções/promo.html">Promoções</a></li>
+            <li><a href="../aboutus/about.html">Sobre nós</a></a></li>
+            <li><a href="../login/login.html">Login</a></li>
+            <li><a href="../unidades/unidades.html">unidades</a></li>
+  
           </div>
       </div>
       
