--- a/login/login.html
+++ b/login/login.html
@@ -8,6 +8,19 @@
     <title>SesiGym</title>
 </head>
 <body>
-    
+      <!--MENU-->
+      <div class="nav">
+        <input type="checkbox">
+          <span></span>
+          <span></span>
+          <div class="menu">
+            <li><a href="../landingpage/main.html">Home</a></li>
+            <li><a href="../promoções/promo.html">Promoções</a></li>
+            <li><a href="../aboutus/about.html">Sobre nós</a></a></li>
+            <li><a href="../login/login.html">Login</a></li>
+            <li><a href="../unidades/unidades.html">unidades</a></li>
+  
+          </div>
+      </div>
 </body>
 </html>
