removi a seção unidades dos href do menu :) bom code!

--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -19,7 +19,7 @@
             <li><a href="../promoções/promo.html">Promoções</a></li>
             <li><a href="../aboutus/about.html">Sobre nós</a></a></li>
             <li><a href="../login/login.html">Login</a></li>
-            <li><a href="../unidades/unidades.html">unidades</a></li>
+          
   
           </div>
       </div>
@@ -31,7 +31,11 @@
       <img src="pontos esq.png" id="pontos">
     </form>
     </div>
-      <!--CARROSEL DE IMAGENS (bom code, dias :))-->
-      <!--CARROSEL DE IMAGENS (Se o java funcionar vai ser bom sim :33, bom code)-->
+
+
+    <!--VSZAP-->
+      <!--(bom code, dias :))-->
+      <!--Se o java funcionar vai ser bom sim :33, bom code)-->
+      <!--ash passando aqui pra te desejar um bom code! <3-->
 </body>
 </html>
