tava tudo pronto né dai o pc reiniciou e agora to arrumando tudo dnv, tristeza, lágrimas :(

--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -9,7 +9,7 @@
     <title>SesiGym</title>
 </head>
 <body onload="timing()">
-    <!--MENU-->
+    <!--MENU--
     <div class="nav">
         <input type="checkbox">
           <span></span>
@@ -23,13 +23,15 @@
   
           </div>
       </div>
+
+      <!--SLIDER-->
       <div class="carro">
         <form>
-      <img src="seta.png" id="setaesq" onclick="car0()">
-      <img id="carroimg" src="imgcar1.jpg">
-      <img src="seta.png" id="setadir" onclick="car1()">
-      <img src="pontos esq.png" id="pontos">
-    </form>
+          <img src="seta.png" id="setaesq" onclick="car0()">
+          <img id="carroimg" src="imgcar1.jpg">
+          <img src="seta.png" id="setadir" onclick="car1()">
+          <img src="pontos esq.png" id="pontos">
+        </form>
     </div>
 
 
@@ -37,5 +39,6 @@
       <!--(bom code, dias :))-->
       <!--Se o java funcionar vai ser bom sim :33, bom code)-->
       <!--ash passando aqui pra te desejar um bom code! <3-->
+
 </body>
 </html>
