agora é so arrumar o tamanho das imagens, os radio e as setas:)

--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -30,7 +30,9 @@
           <img src="seta.png" id="setaesq" onclick="car0()">
           <img id="carroimg" src="imgcar1.jpg">
           <img src="seta.png" id="setadir" onclick="car1()">
-          <img src="pontos esq.png" id="pontos">
+          <input type="radio" class="pontos" id="radio1">
+          <input type="radio" class="pontos" id="radio2">
+          <input type="radio" class="pontos" id="radio3">
         </form>
     </div>
 
