agora é so arrumar o tamanho das imagens, os radio e as setas:)

--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -9,20 +9,7 @@
     <title>SesiGym</title>
 </head>
 <body onload="timing()">
-    <!--MENU--
-    <div class="nav">
-        <input type="checkbox">
-          <span></span>
-          <span></span>
-          <div class="menu">
-            <li><a href="../landingpage/main.html">Home</a></li>
-            <li><a href="../promoções/promo.html">Promoções</a></li>
-            <li><a href="../aboutus/about.html">Sobre nós</a></a></li>
-            <li><a href="../login/login.html">Login</a></li>
-          
-  
-          </div>
-      </div>
+   
 
       <!--SLIDER-->
       <div class="carro">
@@ -35,7 +22,20 @@
           <input type="radio" class="pontos" id="radio3">
         </form>
     </div>
+ <!--MENU-->
+ <div class="nav">
+  <input type="checkbox">
+    <span></span>
+    <span></span>
+    <div class="menu">
+      <li><a href="../landingpage/main.html">Home</a></li>
+      <li><a href="../promoções/promo.html">Promoções</a></li>
+      <li><a href="../aboutus/about.html">Sobre nós</a></a></li>
+      <li><a href="../login/login.html">Login</a></li>
+    
 
+    </div>
+</div>
 
     <!--VSZAP-->
       <!--(bom code, dias :))-->
