começei a fazer a aboutus

--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <script src="js/script.js"></script>
     <title>SesiGym</title>
 </head>
 <body>
@@ -62,5 +64,8 @@
     </div>
 
     <!--SCROLL ANIMADO-->
+    
+    <!--VSZAP-->
+    <!--temos que dar um jeitinho de fazer o scroll, na real, parece bem easy-->
 </body>
 </html>
