--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -17,9 +17,7 @@
           <img src="seta.png" id="setaesq" onclick="car0()">
           <img id="carroimg" src="imgcar1.jpg">
           <img src="seta.png" id="setadir" onclick="car1()">
-          <input type="radio" class="pontos" id="radio1">
-          <input type="radio" class="pontos" id="radio2">
-          <input type="radio" class="pontos" id="radio3">
+          <img src="pontos esq.png" id="pontos">
         </form>
     </div>
  <!--MENU-->
@@ -41,6 +39,7 @@
       <!--(bom code, dias :))-->
       <!--Se o java funcionar vai ser bom sim :33, bom code)-->
       <!--ash passando aqui pra te desejar um bom code! <3-->
+      <!--mn eu fiz um puta rolo e perdi uns 30 min da minha vida .-. bom code <3-->  
 
 </body>
 </html>
