FINALMENTE ESSE CARROSEL TA BONITINHO

--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -14,10 +14,9 @@
       <!--SLIDER-->
       <div class="carro">
         <form>
-          <img src="seta.png" id="setaesq" onclick="car0()">
           <img id="carroimg" src="imgcar1.jpg">
-          <img src="seta.png" id="setadir" onclick="car1()">
-          <img src="pontos esq.png" id="pontos">
+          <div class="blur"></div>
+          <h1 id="maintxt">SesiGym</h1>
         </form>
     </div>
  <!--MENU-->
@@ -40,6 +39,7 @@
       <!--Se o java funcionar vai ser bom sim :33, bom code)-->
       <!--ash passando aqui pra te desejar um bom code! <3-->
       <!--mn eu fiz um puta rolo e perdi uns 30 min da minha vida .-. bom code <3-->  
+        <!--NOSSA Q MERDA SAKDJASK  bom code <3-->
 
 </body>
 </html>
