--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -35,7 +35,7 @@
 
   <!--SCROLL IMG E TXT-->
   <div class="imgs">
-     
+     <img id="img1" src="img1.jpg" onclick="scroll1()">
 
     
   </div>
@@ -56,6 +56,7 @@
       <!--NOSSA Q MERDA SAKDJASK  bom code <3-->
       <!--ash passando aqui pra falar q hoje vou codar nas aulas de TI, bom code,
       não esqueçe o café e de dormir bem <3 -->
+        <!--dormir é foda KKKKK, mas café é de lei. bom code<3 -->
 
 </body>
 </html>
