scrollzin em progresso

--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -34,14 +34,29 @@
   <img src="logo.png" id="logo">
 
   <!--SCROLL IMG E TXT-->
-  <div class="imgs">
-     <img id="img1" src="img1.jpg" onclick="scroll1()">
-
-    
+  <div class="scroll">
+  <div class="img1">
+     <img id="img1" src="img1.jpg" onload="scroll1()"> 
   </div>
-
-
-
+  <div class="img2">
+    <img id="img2" src="img2.jpg" onload="scroll1()"> 
+ </div>
+ <div class="img3">
+  <img id="img3" src="img3.jpg" onload="scroll1()"> 
+</div>
+<div class="img4">
+  <img id="img4" src="img4.jpg" onload="scroll1()"> 
+</div>
+<div class="img5">
+  <img id="img5" src="img5.jpg" onload="scroll1()"> 
+</div>
+<div class="img6">
+  <img id="img6" src="img6.jpg" onload="scroll1()"> 
+</div>
+<div class="img7">
+  <img id="img7" src="img7.jpg" onload="scroll1()"> 
+</div>
+</div>
 
 
 
