adicionei os checkbox

--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -63,9 +63,28 @@
       </div>
     </div>
 
-    <!--SCROLL ANIMADO-->
+  <!--CHEKBOX-->
+  <p id="checktxt">Benefícios da atividade física:</p>
+
+  <label for="checkbox" class="checkbox">
+    <input name="myvalue" type="checkbox" checked="checked" onclick="return false" id="check1">
+      <p id="check1txt">Aumento do equilíbrio do corpo;</p>
+
+      <input name="myvalue" type="checkbox" checked="checked" onclick="return false" id="check2">
+      <p id="check2txt">Aumento da capacidade de respiração pulmonar;</p>
+
+      <input name="myvalue" type="checkbox" checked="checked" onclick="return false" id="check3">
+      <p id="check3txt">Eliminação das toxinas;</p>
+
+      <input name="myvalue" type="checkbox" checked="checked" onclick="return false" id="check4">
+      <p id="check4txt">Ampliação da resistência cardíaca;</p>
+
+      <input name="myvalue" type="checkbox" checked="checked" onclick="return false" id="check5">
+      <p id="check5txt">Melhora a qualidade do sangue.</p>
+  </label>
+
     
     <!--VSZAP-->
-    <!--temos que dar um jeitinho de fazer o scroll, na real, parece bem easy-->
+    
 </body>
 </html>
