--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -82,8 +82,27 @@
       <input name="myvalue" type="checkbox" checked="checked" onclick="return false" id="check5">
       <p id="check5txt">Melhora a qualidade do sangue.</p>
   </label>
-
-    
+  <!--CADASTRO-->
+  <div class="form">
+    <div class="title">Quero mais informações</div>
+    <div class="subtitle">Cadastre-se!</div>
+    <div class="input-container ic1">
+      <input id="firstname" class="input" type="text" placeholder=" " />
+      <div class="cut"></div>
+      <label for="firstname" class="placeholder">Primeiro nome</label>
+    </div>
+    <div class="input-container ic2">
+      <input id="lastname" class="input" type="text" placeholder=" " />
+      <div class="cut"></div>
+      <label for="lastname" class="placeholder">Último nome</label>
+    </div>
+    <div class="input-container ic2">
+      <input id="email" class="input" type="text" placeholder=" " />
+      <div class="cut cut-short"></div>
+      <label for="email" class="placeholder">Email</>
+    </div>
+    <button type="text" class="submit">cadastrar</button>
+  </div>
     <!--VSZAP-->
     
 </body>
