começei os blocks

--- a/promoções/promo.html
+++ b/promoções/promo.html
@@ -88,6 +88,20 @@
           </div>
       </div>
   </div>
-  
+  <!--BLOCKS-->
+ <div class="contbocks">
+    <div id="block1">
+        <p id="block1txt">EVENTOS DA SAÚDE</p>
+        <p id="block1p">O SESI oferece às empresas uma consultoria de Gestão de Qualidade de Vida, onde é realizado a definição, implantação e monitoramento de programas voltados para o bem-estar e saúde dos colaboradores.</p>
+    </div>
+    <div id="block2">
+        <p id="block2txt">EVENTOS DA SAÚDE</p>
+        <p id="block2p">O SESI oferece às empresas uma consultoria de Gestão de Qualidade de Vida, onde é realizado a definição, implantação e monitoramento de programas voltados para o bem-estar e saúde dos colaboradores.</p>
+    </div>
+
+
+
+ </div>
+
 </body>
 </html>
