--- a/promoções/promo.html
+++ b/promoções/promo.html
@@ -88,11 +88,16 @@
           </div>
       </div>
   </div>
-  
-
-
-
  </div>
 
+<div class="blocks">
+    <div id="block1" class="block"><h6>a</h6></div>
+    <div id="block2" class="block"><h6>a</h6></div>
+    <div id="block3" class="block"><h6>a</h6></div>
+    <div id="block4" class="block"><h6>a</h6></div>
+    <div id="block5" class="block"><h6>a</h6></div>
+    <div id="block6" class="block"><h6>a</h6></div>
+    <div id="block7" class="block"><h6>a</h6></div>
+</div>
 </body>
 </html>
