terminando os blocks

--- a/promoções/promo.html
+++ b/promoções/promo.html
@@ -91,13 +91,75 @@
  </div>
 
 <div class="blocks">
-    <div id="block1" class="block"><h6></h6></div>
-    <div id="block2" class="block"><h6></h6></div>
-    <div id="block3" class="block"><h6></h6></div>
-    <div id="block4" class="block"><h6></h6></div>
-    <div id="block5" class="block"><h6></h6></div>
-    <div id="block6" class="block"><h6></h6></div>
-    <div id="block7" class="block"><h6></h6></div>
+    <div id="block1" class="block"><h6></h6>
+        <h3 id="block1txt">EVENTOS DE SAÚDE</h3>
+        <p id="p1">O SESI oferece às empresas uma consultoria de Gestão de Qualidade de Vida, onde é realizado a definição, implantação e monitoramento de programas voltados para o bem-estar e saúde dos colaboradores.</p>
+        <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Leia mais</span>
+          </button>
+    </div>
+
+
+    <div id="block2" class="block"><h6></h6>
+        <h3 id="block2txt">GUIDOO</h3>
+        <p id="p2">Uma plataforma de serviços que ajuda a aumentar o bem-estar de seus usuários, por meio do incentivo à mudança de comportamentos, oferece atualmente três serviços: Medida, Desafio e Coach.</p>
+        <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Leia mais</span>
+          </button>
+    </div>
+
+    <div id="block3" class="block"><h6></h6>
+        <h3 id="block3txt">CLUBE DE ATIVIDADE FÍSICA</h3>
+        <p id="p3">Ambiente de orientação a grupos de práticas esportivas. As atividades são planejadas e realizadas por profissionais habilitados.</p>
+        <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Leia mais</span>
+          </button>
+    </div>
+
+
+    <div id="block4" class="block"><h6></h6>
+    <h3 id="block4txt">INSTALAÇÕES ESPORTIVAS E DE LAZER</h3>
+    <p id="p4"> Espaços destinados à prática de lazer, atividade física e esportes para todos os colaboradores do SESI/SC e a comunidade.</p>
+    <button class="learn-more">
+        <span class="circle" aria-hidden="true">
+        <span class="icon arrow"></span>
+        </span>
+        <span class="button-text">Leia mais</span>
+      </button>
+    </div>
+
+    <div id="block5" class="block"><h6></h6>
+        <h3 id="block5txt">GRUPO DE EMAGRECIMENTO SAUDÁVEL</h3>
+        <p id="p5">O SESI desenvolveu um Grupo de Emagrecimento Saudável com o objetivo de proporcionar ao trabalhador a oportunidade de emagrecer com saúde.</p>
+        <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Leia mais</span>
+          </button>
+    </div>
+
+    <div id="block6" class="block"><h6></h6>
+        <h3 id="block6txt">PLANEJA SESI + SAÚDE</h3>
+        <p id="p6">Assessoria especializada em planejamento de programas de saúde, focada em aumentar a produtividade das empresas por meio da melhoria da qualidade de vida dos trabalhadores.</p>
+        <button class="learn-more">
+            <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Leia mais</span>
+          </button>
+    </div>
+
 </div>
+
 </body>
 </html>
