--- a/landingpage/main.html
+++ b/landingpage/main.html
@@ -35,8 +35,9 @@
 
   <!--SCROLL IMG E TXT-->
   <div class="scroll">
+    <h1 id="pos">0</h1> <!--var só de teste-->
   <div class="img1">
-     <img id="img1" src="img1.jpg" onclick="scroll1()"> 
+     <img id="img1" src="img1.jpg" onload="scroll1()"> 
   </div>
  <div class="img2">
     <img id="img2" src="img2.jpg" onclick="scroll2()"> 
